[gd_scene load_steps=8 format=3 uid="uid://bdo2hndyxrb00"]

[ext_resource type="Script" uid="uid://bustle58gk2m6" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://yyldp1eyjquy" path="res://scenes/player.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://dlxrioj5pl3h" path="res://scenes/mob.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://bujfdcdcyly3g" path="res://scenes/hud.tscn" id="4_jyhfs"]
[ext_resource type="AudioStream" uid="uid://d3kws1nf0mw1q" path="res://art/House In a Forest Loop.ogg" id="5_tefeu"]
[ext_resource type="AudioStream" uid="uid://c2kkho846yy8r" path="res://art/gameover.wav" id="6_o6xl0"]

[sub_resource type="Curve2D" id="Curve2D_0wfyh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")
mob_scene = ExtResource("2_sugp2")

[node name="Player" parent="." instance=ExtResource("1_o5qli")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 540)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_0wfyh")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(480, 221.518)
rotation = 1.5708
progress = 701.52

[node name="HUD" parent="." instance=ExtResource("4_jyhfs")]

[node name="BackMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tefeu")

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_o6xl0")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
